# nilcmetrix

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nilcmetrix  README.md  Test.py  build-nilcmetrix.sh  build.sh  config.py  exec_nilcmetrix.sh  go-build.sh  go.mod  nilcmetrix.go  porsimples.py  pyproject.toml  ranking.go  requirements.txt  run-nilcmetrix-min.sh  run-nilcmetrix.sh  run.sh  run156.py  run50.py  run_all.py  run_all.sh  run_min.py  run_minimal.sh  run_profile.sh  run_profiled.py  run_sentence156.sh  run_sentence50.sh  runcmp.py  rundps.sh  runport.py  setup.py
DATA/: adole-sendo_metrics.tsv  porsimples_metrics.tsv
env/: run-pgs.sh  run-restore-pgs.sh
patches/: nlpnet-py3.patch
static/css/: main.css
static/js/: main.js  nilc1.js
templates/: cohmetrixport.html  metrixdoc.html  nilcmetrix-en.html  nilcmetrix.html  ranking.html
tests/: README.md  conftest.py  run_tests.sh  test_regression.py  update_goldens.py
tests/goldens/: alienista_enredo.json  bone_uniforme.json  cartomante_enredo.json  dialogo_travessao.json  juridico_abstrato.json  macacos_rapel.json  memorias_postumas_cap1.json  menino_colou.json  nobel_circadiano.json  pau_brasil.json  pau_brasil_urbano.json  trump_guantanamo.json  trump_saipov.json
tests/inputs/: alienista_enredo.txt  bone_uniforme.txt  cartomante_enredo.txt  dialogo_travessao.txt  macacos_rapel.txt  memorias_postumas_cap1.txt  menino_colou.txt  nobel_circadiano.txt  pau_brasil.txt  pau_brasil_urbano.txt  (+2 more)
text_metrics/: __init__.py  base.py  conf.py  database.py  profiling.py  resource_pool.py  utils.py
(+71 files in other folders)
